--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<span class="span-1">
 						I am a <b>computer science</b> major at Cornell University and expect to graduate in May 2016.<br><br>  
 						I taught myself HTML and CSS when I was 8 so I could make guild layouts on and
-						fan websites for Neopets.  In high school I was the only girl in my 9-person AP Computer Science class.<br><br>
+						fan websites for Neopets.<br><br>
 						Right now, my favorite language is <b>OCaml</b>.  I am a big fan of functional programming.  
 						I hope to teach myself Haskell in the future.  I also have extensive experience in Java and am familiar with jQuery.
 						<br><br>
