--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link type="text/css" rel="stylesheet" href="css/grid.css">
 		<link type="text/css" rel="stylesheet" href="fonts/stylesheet.css">
 		<link type="text/css" rel="stylesheet" href="fonts/font-awesome.min.css">
+
+		<title>Amber Hillhouse</title>
 	</head>
 
 	<body>
