--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<link type="text/css" rel="stylesheet" href="fonts/stylesheet.css">
 		<link type="text/css" rel="stylesheet" href="fonts/font-awesome.min.css">
 
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
 		<title>Amber Hillhouse</title>
 	</head>
 
