--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			<div class="row">
 				<div class="column-1">
 					<span class="span-3">
-						Click <a href="#">here</a> for a PDF or <a href="#">here</a> for a PNG version of my resume.
+						Click <a href="images/resume.pdf">here</a> for a PDF version of my resume.
 					</span>
 				</div> 
 			</div>
@@ -179,7 +179,7 @@
 				<div class="column-1">
 					<a href="mailto:adh94@cornell.edu" target="_blank"><i class="fa fa-envelope"></i></a>
 					<a href="https://github.com/ahillhouse" target="_blank"><i class="fa fa-github"></i></a>
-					<a href="https://www.linkedin.com/pub/amber-hillhouse/88/15/175" target="_blank"><i class="fa fa-linkedin"></i></a>
+					<a href="https://www.linkedin.com/in/ahillhouse" target="_blank"><i class="fa fa-linkedin"></i></a>
 				</div>
 			</div>
 
