--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			</div>
 		</section>
 		<section id="projects-2" class="grey-bg wrapper center">
-
+			<!--
 			<div class="row">
 				<div class="column-2">
 					<img src="images/Cornell_Seal_Black-transparent.png" height="200px">
@@ -147,7 +147,7 @@
 					</span>
 				</div>
 			</div>
-			<div class="row"><div class="column-1"><div class="divider"></div></div></div>
+			<div class="row"><div class="column-1"><div class="divider"></div></div></div>-->
 			<div class="row">
 				<div class="column-1">
 					<span class="span-3">
