removed lorem ipsum

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<div class="row">
 				<div class="column-1">
 					<span class="span-3">
-						Cool in-class projects I've done include creating MapReduce and a Settlers of Catan game simulator in OCaml.
+						Cool in-class projects I've done include creating a version of MapReduce and a Settlers of Catan game simulator in OCaml.
 					</span>
 				</div>
 			</div> 
