--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 						Right now, my favorite language is <b>OCaml</b>.  I am a big fan of functional programming.  
 						I hope to teach myself Haskell in the future.  I also have extensive experience in Java and am familiar with jQuery.
 						<br><br>
+						Important classes I've taken include Object-Oriented Programming and Data Structures (<i>CS 2110</i>), Discrete Structures (<i>CS 2800</i>),
+						Data Structures and Functional Programming (<i>CS 3110</i>), Programming Languages (<i>CS 4110</i>), 
+						Introduction to Computer Graphics (<i>CS 4620</i>), and Digital Logic and Computer Organization (<i>ECE 2300</i>).
+						<br><br>
 						When I'm not programming, I enjoy musical theatre and doing other peoples' makeup.
 					</span>
 				</div>
