--- a/index.html
+++ b/index.html
@@ -49,10 +49,6 @@
 						Right now, my favorite language is <b>OCaml</b>.  I am a big fan of functional programming.  
 						I hope to teach myself Haskell in the future.  I also have extensive experience in Java and am familiar with jQuery.
 						<br><br>
-						Important classes I've taken include Object-Oriented Programming and Data Structures (<i>CS 2110</i>), Discrete Structures (<i>CS 2800</i>),
-						Data Structures and Functional Programming (<i>CS 3110</i>), Programming Languages (<i>CS 4110</i>), 
-						Introduction to Computer Graphics (<i>CS 4620</i>), and Digital Logic and Computer Organization (<i>ECE 2300</i>).
-						<br><br>
 						When I'm not programming, I enjoy musical theatre and doing other peoples' makeup.
 					</span>
 				</div>
@@ -159,6 +155,50 @@
 					</span>
 				</div>
 			</div> 
+		</section>
+
+		<section id="classes" class="light-bg wrapper center">
+			<div class="row">
+				<div class="column-1">
+					<h2>Relevant Classes<h2>
+				</div>
+			</div>
+		</section>
+		<section id="classes-2" class="grey-bg wrapper center">
+			<div class="row">
+				<div class="column-3">
+					<h4>CS 2110</h4>
+					<h5>Object-Oriented Programming and Data Structures</h5>
+					<span class="span-2">Fall 2013</span>
+				</div>
+				<div class="column-3">
+					<h4>CS 2800</h4>
+					<h5>Discrete Structures</h5>
+					<span class="span-2">Fall 2013</span>
+				</div>
+				<div class="column-3">
+					<h4>CS 3110</h4>
+					<h5>Data Structures and Functional Programming</h5>
+					<span class="span-2">Spring 2014</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="column-3">
+					<h4>CS 4110</h4>
+					<h5>Programming Languages</h5>
+					<span class="span-2">Fall 2014</span>
+				</div>
+				<div class="column-3">
+					<h4>CS 4620</h4>
+					<h5>Introduction to Computer Graphics</h5>
+					<span class="span-2">Fall 2014</span>
+				</div>
+				<div class="column-3">
+					<h4>ECE 2300</h4>
+					<h5>Digital Logic and Computer Organization</h5>
+					<span class="span-2">Fall 2014</span>
+				</div>
+			</div>
 		</section>
 
 		<section id="resume" class="light-bg wrapper center">
