updated work experience

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<h4>Jobly.it</h4>
 					<h5>Front-End Designer</h5>
 					<span class="span-2">
-						<i>June 2014 - Present</i><br>
+						<i>June 2014 - August 2014</i><br>
 						Designed landing page of website for connecting college students and employers, modified Wordpress theme for college recruitment office directory,
 						and designed various forms of advertising including business cards. 
 					</span>
