--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="row">
 				<div class="column-1">
 					<span class="span-1">
-						I am a <b>computer science</b> major at Cornell University and expect to graduate in May 2016.<br><br>  
+						I am a sophomore <b>computer science</b> major at Cornell University but expect to graduate in May 2016.<br><br>  
 						I taught myself HTML and CSS when I was 8 so I could make guild layouts on and
 						fan websites for Neopets.<br><br>
 						Right now, my favorite language is <b>OCaml</b>.  I am a big fan of functional programming.  
