--- a/index.html
+++ b/index.html
@@ -86,15 +86,6 @@
 					</span>
 				</div>
 			</div>
-			<div class="row"><div class="column-1"><div class="divider"></div></div></div>
-			<div class="row">
-				<div class="column-1">
-					<span class="span-3">
-						I also have a lot of <b>people skills</b>.  I worked as a sales associate at American Eagle Outfitters.  
-						I volunteered as an intern at a local theatre company and church where I worked with kindergarten through middle-school-aged children.
-					</span>
-				</div>
-			</div> 
 		</section>
 
 		<section id="projects" class="light-bg wrapper center">
@@ -105,21 +96,21 @@
 			</div>
 		</section>
 		<section id="projects-2" class="grey-bg wrapper center">
-			<!--
+			
 			<div class="row">
 				<div class="column-2">
-					<img src="images/Cornell_Seal_Black-transparent.png" height="200px">
+					<img src="images/mannequin.png" height="200px">
 				</div>
 				<div class="column-2">
-					<h4>Project Name</h4>
-					<h5>Languages Used</h5>
+					<h4>Interactive Wooden Artist's Mannequin</h4>
+					<h5>Java</h5>
 					<span class="span-2">
-						<i>Time Period</i><br>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dui odio, tincidunt non eleifend eu, vestibulum vitae nibh. Vestibulum pharetra quis lorem et eleifend. Phasellus consectetur ultricies elit quis aliquet. Aenean porttitor ipsum non justo ultrices mollis. Donec vitae ornare arcu, sit amet tempor odio.
+						<i>December 2014</i><br>
+						Worked on a team that used inverse kinematics and procedural wood generation to create an interactive mesh that could be posed and exported to render using a wood shader.  I specifically worked on creating the wood shader.  We developed a function to create 3D ring generation, instead of simply mapping a wooden texture, to emulate carving something out of a 3D chunk of wood.  We also used subsurface geometry to do light shading.  <a href="images/rendering-interactive-wooden.pdf">Here</a> is our project report.
 					</span>
 				</div>
 			</div>
-			<div class="row"><div class="column-1"><div class="divider"></div></div></div>
+			<!--<div class="row"><div class="column-1"><div class="divider"></div></div></div>
 			<div class="row">
 				<div class="column-2 floatright">
 					<img src="images/Cornell_Seal_Black-transparent.png" height="200px">
@@ -146,8 +137,8 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dui odio, tincidunt non eleifend eu, vestibulum vitae nibh. Vestibulum pharetra quis lorem et eleifend. Phasellus consectetur ultricies elit quis aliquet. Aenean porttitor ipsum non justo ultrices mollis. Donec vitae ornare arcu, sit amet tempor odio.
 					</span>
 				</div>
-			</div>
-			<div class="row"><div class="column-1"><div class="divider"></div></div></div>-->
+			</div>-->
+			<div class="row"><div class="column-1"><div class="divider"></div></div></div>
 			<div class="row">
 				<div class="column-1">
 					<span class="span-3">
