Update relevant classes

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 						I am a sophomore <b>computer science</b> major at Cornell University but expect to graduate in May 2016.<br><br>  
 						I taught myself HTML and CSS when I was 8 so I could make guild layouts on and
 						fan websites for Neopets.<br><br>
-						Right now, my favorite language is <b>OCaml</b>.  I am a big fan of functional programming.  
-						I hope to teach myself Haskell in the future.  I also have extensive experience in Java and am familiar with jQuery.
+						Right now, my favorite language is <b>OCaml</b>.  I also have extensive experience in Java and am familiar with C, C++, and jQuery.
 						<br><br>
 						When I'm not programming, I enjoy musical theatre and doing other peoples' makeup.
 					</span>
@@ -188,6 +187,23 @@
 					<h4>ECE 2300</h4>
 					<h5>Digital Logic and Computer Organization</h5>
 					<span class="span-2">Fall 2014</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="column-3">
+					<h4>CS 3410</h4>
+					<h5>Computer System Organization and Programming</h5>
+					<span class="span-2">Spring 2015</span>
+				</div>
+				<div class="column-3">
+					<h4>CS 4820</h4>
+					<h5>Introduction to Analysis of Algorithms</h5>
+					<span class="span-2">Spring 2015</span>
+				</div>
+				<div class="column-3">
+					<h4>CS 5152</h4>
+					<h5>Open-Source Software Engineering</h5>
+					<span class="span-2">Spring 2015s</span>
 				</div>
 			</div>
 		</section>
