--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 			<div class="row">
 				<div class="column-1">
 					<span class="span-1">
-						I am a sophomore <b>computer science</b> major at Cornell University but expect to graduate in May 2016.<br><br>  
+						I am a senior <b>computer science</b> major at Cornell University and expect to graduate in May 2016.<br><br>  
 						I taught myself HTML and CSS when I was 8 so I could make guild layouts on and
 						fan websites for Neopets.<br><br>
-						Right now, my favorite language is <b>OCaml</b>.  I also have extensive experience in Java and am familiar with C, C++, and jQuery.
+						Right now, my favorite language is <b>OCaml</b>.  I also have extensive experience in Java and am familiar with C++.
 						<br><br>
 						When I'm not programming, I enjoy musical theatre and doing other peoples' makeup.
 					</span>
@@ -104,26 +104,27 @@
 					<h4>Interactive Wooden Artist's Mannequin</h4>
 					<h5>Java</h5>
 					<span class="span-2">
-						<i>December 2014</i><br>
+						<i>September-December 2014</i><br>
 						Worked on a team that used inverse kinematics and procedural wood generation to create an interactive mesh that could be posed and exported to render using a wood shader.  I specifically worked on creating the wood shader.  We developed a function to create 3D ring generation, instead of simply mapping a wooden texture, to emulate carving something out of a 3D chunk of wood.  We also used subsurface geometry to do light shading.  <a href="images/rendering-interactive-wooden.pdf">Here</a> is our project report.
 					</span>
 				</div>
 			</div>
-			<!--<div class="row"><div class="column-1"><div class="divider"></div></div></div>
+			<div class="row"><div class="column-1"><div class="divider"></div></div></div>
 			<div class="row">
 				<div class="column-2 floatright">
 					<img src="images/Cornell_Seal_Black-transparent.png" height="200px">
 				</div>
 				<div class="column-2">
-					<h4>Project Name</h4>
-					<h5>Languages Used</h5>
+					<h4>Automatic Matrix Differentiation</h4>
+					<h5>C++</h5>
 					<span class="span-2">
-						<i>Time Period</i><br>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dui odio, tincidunt non eleifend eu, vestibulum vitae nibh. Vestibulum pharetra quis lorem et eleifend. Phasellus consectetur ultricies elit quis aliquet. Aenean porttitor ipsum non justo ultrices mollis. Donec vitae ornare arcu, sit amet tempor odio.
+						<i>February-May 2015</i><br>
+						Worked on a team to develop software to simplify matrix differentiation for both humans and computers.  Matrix calculus is very complex and computationally heavy.  Created an open-source library that significantly reduces the memory- and time-complexity required to compute derivatives of scalar-matrix functions.  <a href="http://pkambadu.github.io/AMD/">Here</a> is the 
+						project's documentation and source code.
 					</span>
 				</div>
 			</div>
-			<div class="row"><div class="column-1"><div class="divider"></div></div></div>
+			<!-- <div class="row"><div class="column-1"><div class="divider"></div></div></div>
 			<div class="row">
 				<div class="column-2 floatleft">
 					<img src="images/Cornell_Seal_Black-transparent.png" height="200px">
@@ -136,7 +137,7 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dui odio, tincidunt non eleifend eu, vestibulum vitae nibh. Vestibulum pharetra quis lorem et eleifend. Phasellus consectetur ultricies elit quis aliquet. Aenean porttitor ipsum non justo ultrices mollis. Donec vitae ornare arcu, sit amet tempor odio.
 					</span>
 				</div>
-			</div>-->
+			</div> -->
 			<div class="row"><div class="column-1"><div class="divider"></div></div></div>
 			<div class="row">
 				<div class="column-1">
