--- a/index.html
+++ b/index.html
@@ -1,249 +1,113 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <head>
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link type="text/css" rel="stylesheet" href="css/index.css">
-		<link type="text/css" rel="stylesheet" href="css/grid.css">
-		<link type="text/css" rel="stylesheet" href="fonts/stylesheet.css">
-		<link type="text/css" rel="stylesheet" href="fonts/font-awesome.min.css">
+        <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
 
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+        <link type="text/css" rel="stylesheet" href="css/index.css">
+        <link type="text/css" rel="stylesheet" href="css/grid.css">
 
-		<title>Amber Hillhouse</title>
-	</head>
+        <title>Amber Hillhouse</title>
+    </head>
 
-	<body>
+    <!--         <nav class="wrapper-nopadding right">
+            <div class="row">
+                <div class="column-1">
+                    navigation
+                </div>
+            </div>
+        </nav> -->
 
-		<nav id="static" class="maroon-bg wrapper-smallpadding">
-			<div class="row">
-				<div class="column-2 left">
-					<img src="images/lambda-a-nobg.svg" height="40px">
-				</div>
-				<div class="column-2 right">
-					<ul>
-						<li><a href="mailto:adh94@cornell.edu" target="_blank">Email</a></li>
-						<li><a href="https://github.com/ahillhouse" target="_blank">GitHub</a></li>
-						<li><a href="https://www.linkedin.com/pub/amber-hillhouse/88/15/175" target="_blank">LinkedIn</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
+    <body class="wrapper-nopadding">
+        <header class="wrapper left">
+            <div class="row">
+                <div class="column-1">
+                    amber hillhouse
+                </div>
+            </div>
+        </header>
 
-		<header class="maroon-bg wrapper left">
-			<div class="row">
-				<div class="column-1">
-					<h1>Hi, <br>my name is Amber.</h1>
-				</div>
-			</div>
-		</header>
+        <div id="main" class="margin-after">
 
-		<section id="about-me" class="grey-bg wrapper center">
-			<div class="row">
-				<div class="column-1">
-					<span class="span-1">
-						I am a senior <b>computer science</b> major at Cornell University and expect to graduate in May 2016.<br><br>  
-						I taught myself HTML and CSS when I was 8 so I could make guild layouts on and
-						fan websites for Neopets.<br><br>
-						Right now, my favorite language is <b>OCaml</b>.  I also have extensive experience in Java and am familiar with C++.
-						<br><br>
-						When I'm not programming, I enjoy musical theatre and doing other peoples' makeup.
-					</span>
-				</div>
-			</div>
-		</section>
+            <div class="row">
+                <div id="education-left" class="section-name floatleft column-8 right">
+                    Education
+                </div>
+                <div id="education-right" class="section-description floatright column-875p left">
+                    <b>Cornell University</b><br>
+                    <i>Anticipated Graduation:</i> May, 2016<br>
+                    <i>Major:</i> Computer Science<br>
+                    <i>Cumulative GPA:</i> 3.5<br>
+                    <i>Relevant Courses:</i> Object-Oriented Programming and Data Structures, Discrete Structures, Data Structures and Functional Programming, 
+                    Programming Languages, Introduction to Computer Graphics, Digital Logic and Computer Organization, Computer Organization and Programming, 
+                    Introduction to Analysis of Algorithms, Open-Source Software Engineering, Operating Systems (Fall 2016), Introduction to Database Systems (Fall 2016)
 
-		<section id="work-experience" class="light-bg wrapper center">
-			<div class="row">
-				<div class="column-1">
-					<h2>Work Experience</h2>
-				</div>
-			</div>
-		</section>
-		<section id="work-experience-2" class="grey-bg wrapper center">
-			<div class="row">
-				<div class="column-2">
-					<img src="images/Cornell_Seal_Black-transparent.png" height="100px"><br><br>
-					<h4>Cornell University</h4>
-					<h5>CS 3110 Consultant</h5>
-					<span class="span-2">
-						<i>August 2014 - Present</i><br>
-						I was extremely excited when I was invited to become part of course staff for CS 3110: Data Structures and Functional Programming.
-						This challenging course, which was my favorite so far at Cornell, is taught in OCaml.
-					</span>
+                </div>
+            </div>
 
-				</div>
-				<div class="column-2">
-					<img src="images/JoblyLogo.svg" height="100px"><br><br>
-					<h4>Jobly.it</h4>
-					<h5>Front-End Designer</h5>
-					<span class="span-2">
-						<i>June 2014 - August 2014</i><br>
-						Designed landing page of website for connecting college students and employers, modified Wordpress theme for college recruitment office directory,
-						and designed various forms of advertising including business cards. 
-					</span>
-				</div>
-			</div>
-		</section>
+            <div class="row">
+                <div id="work-left" class="section-name floatleft column-8 right">
+                    Work
+                </div>
+                <div id="work-right" class="section-description floatright column-875p left">
+                    <b>Microsoft</b><br>
+                    <i>Software Engineering Intern / June 2015 - August 2015</i><br><br>
 
-		<section id="projects" class="light-bg wrapper center">
-			<div class="row">
-				<div class="column-1">
-					<h2>Projects</h2>
-				</div>
-			</div>
-		</section>
-		<section id="projects-2" class="grey-bg wrapper center">
-			
-			<div class="row">
-				<div class="column-2">
-					<img src="images/mannequin.png" height="200px">
-				</div>
-				<div class="column-2">
-					<h4>Interactive Wooden Artist's Mannequin</h4>
-					<h5>Java</h5>
-					<span class="span-2">
-						<i>September-December 2014</i><br>
-						Worked on a team that used inverse kinematics and procedural wood generation to create an interactive mesh that could be posed and exported to render using a wood shader.  I specifically worked on creating the wood shader.  We developed a function to create 3D ring generation, instead of simply mapping a wooden texture, to emulate carving something out of a 3D chunk of wood.  We also used subsurface geometry to do light shading.  <a href="images/rendering-interactive-wooden.pdf">Here</a> is our project report.
-					</span>
-				</div>
-			</div>
-			<div class="row"><div class="column-1"><div class="divider"></div></div></div>
-			<div class="row">
-				<div class="column-2 floatright">
-					<img src="images/Cornell_Seal_Black-transparent.png" height="200px">
-				</div>
-				<div class="column-2">
-					<h4>Automatic Matrix Differentiation</h4>
-					<h5>C++</h5>
-					<span class="span-2">
-						<i>February-May 2015</i><br>
-						Worked on a team to develop software to simplify matrix differentiation for both humans and computers.  Matrix calculus is very complex and computationally heavy.  Created an open-source library that significantly reduces the memory- and time-complexity required to compute derivatives of scalar-matrix functions.  <a href="http://pkambadu.github.io/AMD/">Here</a> is the 
-						project's documentation and source code.
-					</span>
-				</div>
-			</div>
-			<!-- <div class="row"><div class="column-1"><div class="divider"></div></div></div>
-			<div class="row">
-				<div class="column-2 floatleft">
-					<img src="images/Cornell_Seal_Black-transparent.png" height="200px">
-				</div>
-				<div class="column-2">
-					<h4>Project Name</h4>
-					<h5>Languages Used</h5>
-					<span class="span-2">
-						<i>Time Period</i><br>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dui odio, tincidunt non eleifend eu, vestibulum vitae nibh. Vestibulum pharetra quis lorem et eleifend. Phasellus consectetur ultricies elit quis aliquet. Aenean porttitor ipsum non justo ultrices mollis. Donec vitae ornare arcu, sit amet tempor odio.
-					</span>
-				</div>
-			</div> -->
-			<div class="row"><div class="column-1"><div class="divider"></div></div></div>
-			<div class="row">
-				<div class="column-1">
-					<span class="span-3">
-						Cool in-class projects I've done include creating a version of MapReduce and a Settlers of Catan game simulator in OCaml.
-					</span>
-				</div>
-			</div> 
-		</section>
+                    <b>Cornell University</b><br>
+                    <i>CS 3110 Consultant / August 2014 - Present</i><br>
+                    Course staff for CS 3110: Data Structures and Functional Programming;  Assist with tutoring, grading, and project development for
+                    challenging course that introduces the functional programming paradigm in OCaml<br><br>
 
-		<section id="classes" class="light-bg wrapper center">
-			<div class="row">
-				<div class="column-1">
-					<h2>Relevant Classes<h2>
-				</div>
-			</div>
-		</section>
-		<section id="classes-2" class="grey-bg wrapper center">
-			<div class="row">
-				<div class="column-3">
-					<h4>CS 2110</h4>
-					<h5>Object-Oriented Programming and Data Structures</h5>
-					<span class="span-2">Fall 2013</span>
-				</div>
-				<div class="column-3">
-					<h4>CS 2800</h4>
-					<h5>Discrete Structures</h5>
-					<span class="span-2">Fall 2013</span>
-				</div>
-				<div class="column-3">
-					<h4>CS 3110</h4>
-					<h5>Data Structures and Functional Programming</h5>
-					<span class="span-2">Spring 2014</span>
-				</div>
-			</div>
-			<div class="row">
-				<div class="column-3">
-					<h4>CS 4110</h4>
-					<h5>Programming Languages</h5>
-					<span class="span-2">Fall 2014</span>
-				</div>
-				<div class="column-3">
-					<h4>CS 4620</h4>
-					<h5>Introduction to Computer Graphics</h5>
-					<span class="span-2">Fall 2014</span>
-				</div>
-				<div class="column-3">
-					<h4>ECE 2300</h4>
-					<h5>Digital Logic and Computer Organization</h5>
-					<span class="span-2">Fall 2014</span>
-				</div>
-			</div>
-			<div class="row">
-				<div class="column-3">
-					<h4>CS 3410</h4>
-					<h5>Computer System Organization and Programming</h5>
-					<span class="span-2">Spring 2015</span>
-				</div>
-				<div class="column-3">
-					<h4>CS 4820</h4>
-					<h5>Introduction to Analysis of Algorithms</h5>
-					<span class="span-2">Spring 2015</span>
-				</div>
-				<div class="column-3">
-					<h4>CS 5152</h4>
-					<h5>Open-Source Software Engineering</h5>
-					<span class="span-2">Spring 2015s</span>
-				</div>
-			</div>
-		</section>
+                    <b>Jobly.it</b><br>
+                    <i>Front-End Designer / June 2014 - August 2014</i><br>
+                    Design and development of landing page for seed-stage startup to connect college students and employers in HTML, CSS, and jQuery;
+                    Modification of Wordpress theme for college recruitment office directory; Design of various forms of advertising and business cards
+                </div>
+            </div>
 
-		<section id="resume" class="light-bg wrapper center">
-			<div class="row">
-				<div class="column-1">
-					<h2>Resume</h2>
-				</div>
-			</div>
-		</section>
-		<section id="resume-2" class="grey-bg wrapper center">
-			<div class="row">
-				<div class="column-1">
-					<span class="span-3">
-						Click <a href="images/resume.pdf">here</a> for a PDF version of my resume.
-					</span>
-				</div> 
-			</div>
-		</section>
+            <div class="row">
+                <div id="projects-left" class="section-name floatleft column-8 right">
+                    Projects
+                </div>
+                <div id="projects-right" class="section-description floatright column-875p left">
+                    <b>Interactive Wooden Artist's Mannequin</b><br>
+                    <i>Java / September - December 2014</i><br>
+                    Worked on a team that used inverse kinematics and procedural wood generation to create an interactive mesh that could be posed and exported to render using a wood shader; I specifically worked on creating the wood shader; developed a function to create 3D ring generation, instead of simply mapping a wooden texture, to emulate carving something out of a 3D chunk of wood; also used subsurface geometry to do light shading; click <a href="http://ahillhouse.com/images/rendering-interactive-wooden.pdf">here</a> to view the project report<br><br>
 
-		<section id="bottom" class="maroon-bg wrapper-smallpadding">
-			<div id="nav-mobile" class="row">
-				<div class="column-1">
-					<a href="mailto:adh94@cornell.edu" target="_blank"><i class="fa fa-envelope"></i></a>
-					<a href="https://github.com/ahillhouse" target="_blank"><i class="fa fa-github"></i></a>
-					<a href="https://www.linkedin.com/in/ahillhouse" target="_blank"><i class="fa fa-linkedin"></i></a>
-				</div>
-			</div>
+                    <b>Automatic Matrix Differentiation</b><br>
+                    <i>C++ / February - May 2015</i><br>
+                    Worked on a team to develop software to simplify matrix differentiation for both humans and computers because matrix calculus is very complex and computationally heavy; created an open-source library that significantly reduces the memory- and time-complexity required to compute derivatives of scalar-matrix functions; click <a href="http://pkambadu.github.io/AMD/">here</a> to view documentation and source code
+                </div>
+            </div>
 
-			<div class="row">
-				<div class="column-1">
-					<span class="span-4">
-						Designed by Amber Hillhouse 2014
-					</span>
-				</div>
-			</div>
-		</section>
+            <div class="row">
+                <div id="skills-left" class="section-name floatleft column-8 right">
+                    Skills
+                </div>
+                <div id="skills-right" class="section-description floatright column-875p left">
+                    <b>Programming/Design Languages</b><br>
+                    Java, OCaml, C++, C#, jQuery, HTMl, CSS, LaTeX<br><br>
 
-	</body>
+                    <b>Other Technical</b><br>
+                    Adobe Photoshop/Illustrator, GitHub<br><br>
+
+                    <b>Interpersonal</b><br>
+                    Public speaking, Patience, Teamwork<br><br>
+
+                    <b>Intrapersonal</b><br>
+                    Organization, Time Management, Independence, Creativity/Design<br><br>
+
+                    <b>Foreign Languages</b><br>
+                    Proficient in German
+                </div>
+            </div>
+        </div>
+
+        <footer class="wrapper-smallpadding"></footer>
+
+
+    </body>
 
 </html>
