Update microsoft experience

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 </div>
                 <div id="work-right" class="section-description floatright column-875p left">
                     <b>Microsoft</b><br>
-                    <i>Software Engineering Intern / June 2015 - August 2015</i><br><br>
+                    <i>Software Engineering Intern / June 2015 - August 2015</i><br>
+                    Worked on Windows Intune deployment team to speed up the Intune deployment process in emergency scenarios; Defined grammar for environmentally-conditional values within configuration files and modified existing software to do in-place replacement with correct values; Optimized compression in build packaging which resulted in almost 150% decrease in compression time; Created portal on Azure using ASP.NET MVC to request and queue build deployments which removed many manual, error-prone steps in setting up a build for deployment; Used C# and Powershell<br><br>
 
                     <b>Cornell University</b><br>
                     <i>CS 3110 Consultant / August 2014 - Present</i><br>
@@ -88,7 +89,7 @@
                 </div>
                 <div id="skills-right" class="section-description floatright column-875p left">
                     <b>Programming/Design Languages</b><br>
-                    Java, OCaml, C++, C#, jQuery, HTMl, CSS, LaTeX<br><br>
+                    Java, OCaml, C++, C#, jQuery, HTML, CSS, LaTeX<br><br>
 
                     <b>Other Technical</b><br>
                     Adobe Photoshop/Illustrator, GitHub<br><br>
