Add contact links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <link type="text/css" rel="stylesheet" href="css/index.css">
         <link type="text/css" rel="stylesheet" href="css/grid.css">
+        <link type="text/css" rel="stylesheet" href="fonts/font-awesome.min.css">
 
         <title>Amber Hillhouse</title>
     </head>
@@ -103,6 +104,14 @@
                     <b>Foreign Languages</b><br>
                     Proficient in German
                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div id="contact-links" class="center column-1">
+                    <a href="mailto:adh94@cornell.edu" target="_blank"><i class="fa fa-envelope"></i></a>
+                    <a href="https://github.com/ahillhouse" target="_blank"><i class="fa fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/ahillhouse" target="_blank"><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
 
