Update work history and skills

--- a/index.html
+++ b/index.html
@@ -38,13 +38,9 @@
                 </div>
                 <div id="education-right" class="section-description floatright column-875p left">
                     <b>Cornell University</b><br>
-                    <i>Anticipated Graduation:</i> May, 2016<br>
+                    <i>Graduated:</i> May 2016<br>
                     <i>Major:</i> Computer Science<br>
-                    <i>Cumulative GPA:</i> 3.5<br>
-                    <i>Relevant Courses:</i> Object-Oriented Programming and Data Structures, Discrete Structures, Data Structures and Functional Programming, 
-                    Programming Languages, Introduction to Computer Graphics, Digital Logic and Computer Organization, Computer Organization and Programming, 
-                    Introduction to Analysis of Algorithms, Open-Source Software Engineering, Operating Systems (Fall 2016), Introduction to Database Systems (Fall 2016)
-
+                    <i>Cumulative GPA:</i> 3.6<br>
                 </div>
             </div>
 
@@ -53,19 +49,17 @@
                     Work
                 </div>
                 <div id="work-right" class="section-description floatright column-875p left">
+                    <b>Google</b><br>
+                    <i>Software Engineer / August 2017 - Present</i><br><br>
+                    
                     <b>Microsoft</b><br>
                     <i>Software Engineering Intern / June 2015 - August 2015</i><br>
                     Worked on Windows Intune deployment team to speed up the Intune deployment process in emergency scenarios; Defined grammar for environmentally-conditional values within configuration files and modified existing software to do in-place replacement with correct values; Optimized compression in build packaging which resulted in almost 150% decrease in compression time; Created portal on Azure using ASP.NET MVC to request and queue build deployments which removed many manual, error-prone steps in setting up a build for deployment; Used C# and Powershell<br><br>
 
                     <b>Cornell University</b><br>
-                    <i>CS 3110 Consultant / August 2014 - Present</i><br>
+                    <i>CS 3110 Consultant / August 2014 - May 2016</i><br>
                     Course staff for CS 3110: Data Structures and Functional Programming;  Assist with tutoring, grading, and project development for
                     challenging course that introduces the functional programming paradigm in OCaml<br><br>
-
-                    <b>Jobly.it</b><br>
-                    <i>Front-End Designer / June 2014 - August 2014</i><br>
-                    Design and development of landing page for seed-stage startup to connect college students and employers in HTML, CSS, and jQuery;
-                    Modification of Wordpress theme for college recruitment office directory; Design of various forms of advertising and business cards
                 </div>
             </div>
 
@@ -89,8 +83,8 @@
                     Skills
                 </div>
                 <div id="skills-right" class="section-description floatright column-875p left">
-                    <b>Programming/Design Languages</b><br>
-                    Java, OCaml, C++, C#, jQuery, HTML, CSS, LaTeX<br><br>
+                    <b>Programming/Design Languages and Frameworks</b><br>
+                    Javascript/AngularJs, Typescript/Angular Java, OCaml, C++, C#<br><br>
 
                     <b>Other Technical</b><br>
                     Adobe Photoshop/Illustrator, GitHub<br><br>
