Remove extra line breaks

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <b>Cornell University</b><br>
                     <i>CS 3110 Consultant / August 2014 - May 2016</i><br>
                     Course staff for CS 3110: Data Structures and Functional Programming;  Assist with tutoring, grading, and project development for
-                    challenging course that introduces the functional programming paradigm in OCaml<br><br>
+                    challenging course that introduces the functional programming paradigm in OCaml
                 </div>
             </div>
 
