--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div id="skills-right" class="section-description floatright column-875p left">
                     <b>Programming/Design Languages and Frameworks</b><br>
-                    Javascript/AngularJs, Typescript/Angular Java, OCaml, C++, C#<br><br>
+                    Javascript/AngularJs, Typescript/Angular, Java, OCaml, C++, C#<br><br>
 
                     <b>Other Technical</b><br>
                     Adobe Photoshop/Illustrator, GitHub<br><br>
