--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
                 </div>
             </div>
         </div>
+        
+        <div class="row">
+            <div id="theatrical" class="center column-1">
+                I also do theater!
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/82hkRl7EIV4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
 
         <div class="row">
             <div id="contact-links" class="center column-1">
