--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         
         <div class="row">
             <div id="theatrical" class="center column-1">
-                I also do theater!
+                I also do theater!<br>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/82hkRl7EIV4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
