Update theatre reel

--- a/index.html
+++ b/index.html
@@ -32,87 +32,9 @@
 
         <div id="main" class="margin-after">
 
-            <div class="row">
-                <div id="education-left" class="section-name floatleft column-8 right">
-                    Education
-                </div>
-                <div id="education-right" class="section-description floatright column-875p left">
-                    <b>Cornell University</b><br>
-                    <i>Graduated:</i> May 2016<br>
-                    <i>Major:</i> Computer Science<br>
-                    <i>Cumulative GPA:</i> 3.6<br>
-                </div>
-            </div>
-
-            <div class="row">
-                <div id="work-left" class="section-name floatleft column-8 right">
-                    Work
-                </div>
-                <div id="work-right" class="section-description floatright column-875p left">
-                    <b>Google</b><br>
-                    <i>Software Engineer / August 2016 - Present</i><br><br>
-                    
-                    <b>Microsoft</b><br>
-                    <i>Software Engineering Intern / June 2015 - August 2015</i><br>
-                    Worked on Windows Intune deployment team to speed up the Intune deployment process in emergency scenarios; Defined grammar for environmentally-conditional values within configuration files and modified existing software to do in-place replacement with correct values; Optimized compression in build packaging which resulted in almost 150% decrease in compression time; Created portal on Azure using ASP.NET MVC to request and queue build deployments which removed many manual, error-prone steps in setting up a build for deployment; Used C# and Powershell<br><br>
-
-                    <b>Cornell University</b><br>
-                    <i>CS 3110 Consultant / August 2014 - May 2016</i><br>
-                    Course staff for CS 3110: Data Structures and Functional Programming;  Assist with tutoring, grading, and project development for
-                    challenging course that introduces the functional programming paradigm in OCaml
-                </div>
-            </div>
-
-            <div class="row">
-                <div id="projects-left" class="section-name floatleft column-8 right">
-                    Projects
-                </div>
-                <div id="projects-right" class="section-description floatright column-875p left">
-                    <b>Interactive Wooden Artist's Mannequin</b><br>
-                    <i>Java / September - December 2014</i><br>
-                    Worked on a team that used inverse kinematics and procedural wood generation to create an interactive mesh that could be posed and exported to render using a wood shader; I specifically worked on creating the wood shader; developed a function to create 3D ring generation, instead of simply mapping a wooden texture, to emulate carving something out of a 3D chunk of wood; also used subsurface geometry to do light shading; click <a href="http://ahillhouse.com/images/rendering-interactive-wooden.pdf">here</a> to view the project report<br><br>
-
-                    <b>Automatic Matrix Differentiation</b><br>
-                    <i>C++ / February - May 2015</i><br>
-                    Worked on a team to develop software to simplify matrix differentiation for both humans and computers because matrix calculus is very complex and computationally heavy; created an open-source library that significantly reduces the memory- and time-complexity required to compute derivatives of scalar-matrix functions; click <a href="http://pkambadu.github.io/AMD/">here</a> to view documentation and source code
-                </div>
-            </div>
-
-            <div class="row">
-                <div id="skills-left" class="section-name floatleft column-8 right">
-                    Skills
-                </div>
-                <div id="skills-right" class="section-description floatright column-875p left">
-                    <b>Programming/Design Languages and Frameworks</b><br>
-                    Javascript/AngularJs, Typescript/Angular, Java, OCaml, C++, C#<br><br>
-
-                    <b>Other Technical</b><br>
-                    Adobe Photoshop/Illustrator, GitHub<br><br>
-
-                    <b>Interpersonal</b><br>
-                    Public speaking, Patience, Teamwork<br><br>
-
-                    <b>Intrapersonal</b><br>
-                    Organization, Time Management, Independence, Creativity/Design<br><br>
-
-                    <b>Foreign Languages</b><br>
-                    Proficient in German
-                </div>
-            </div>
-        </div>
-        
         <div class="row">
             <div id="theatrical" class="center column-1">
-                I also do theater!<br>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/82hkRl7EIV4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div class="row">
-            <div id="contact-links" class="center column-1">
-                    <a href="mailto:adh94@cornell.edu" target="_blank"><i class="fa fa-envelope"></i></a>
-                    <a href="https://github.com/ahillhouse" target="_blank"><i class="fa fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/ahillhouse" target="_blank"><i class="fa fa-linkedin"></i></a>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Z1xzSXUw6hY?si=zEf6szbqpgjyfIp-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
 
